--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         .title-background {
             background-color: #484849;
             padding: 2%;
-  
+
             border-radius: 10px;
             box-shadow: 10px 10px 5px rgb(37, 36, 36);
         }
@@ -90,7 +90,6 @@
         }
 
         .sectionAlt {
-            height: calc(100vh + 53px);
             width: 80%;
             padding: 5%;
             margin: auto;
@@ -359,13 +358,21 @@
             My hunger for knowledge and determination to turn information into action has contributed to my success
             at my company, in building exciting new products to quickly impact the target market.
         </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar eget metus ut molestie. Nulla facilisi.
+            Proin semper dignissim leo, vitae tincidunt urna vehicula non. Nulla vitae volutpat diam. Cras et maximus
+            risus. Nam scelerisque, nisi ut aliquam fringilla, nulla leo fringilla eros, nec ultricies nisl tellus vel
+            justo. Maecenas finibus nisi at quam dignissim tempor. Maecenas gravida blandit metus sit amet iaculis.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar eget metus ut molestie. Nulla facilisi.
+            Proin semper dignissim leo, vitae tincidunt urna vehicula non. Nulla vitae volutpat diam. Cras et maximus
+            risus. Nam scelerisque, nisi ut aliquam fringilla, nulla leo fringilla eros, nec ultricies nisl tellus vel
+            justo. Maecenas finibus nisi at quam dignissim tempor. Maecenas gravida blandit metus sit amet iaculis.
+        </p>
+
         <div class="center">
-            <a href="http://github.com/CameronFullerDev"><img class="contactImg" alt="" src="./img/GitHub.png" /></a>
-            <a href="mailto:cameron-fuller@hotmail.com"><img class="contactImg" alt="" src="./img/Email.png" /></a>
-            <a href="https://www.linkedin.com/in/cameron-fuller-455052141/"><img class="contactImg" alt=""
-                    src="./img/LinkedIn.png" /></a>
-            <br />
-            <a href="#skills" class="highlightText fade largeText grow" style="bottom: 0;"> ⯆ </a>
+            <a href="#skills" class="highlightText fade largeText grow"> ⯆ </a>
         </div>
     </div>
 
@@ -374,92 +381,234 @@
         <h2>Skills</h2>
         <div>
             <ul>
-
-                <li style="display: inline-block;width:100%;padding-top:20px;">C#
-                    <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
-                        <div class="w3-container w3-blue w3-round-xlarge" style="width:90%">90%</div>
-                    </div>
+                <li>
+                    C#
                 </li>
-                <li style="display: inline-block;width:100%;padding-top:20px;">SQL
-                    <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
-                        <div class="w3-container w3-blue w3-round-xlarge" style="width:80%">80%</div>
-                    </div>
+                <li>
+                    SQL
                 </li>
-                <li style="display: inline-block;width:100%;padding-top:20px;">Azure
-                    <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
-                        <div class="w3-container w3-blue w3-round-xlarge" style="width:80%">80%</div>
-                    </div>
+                <li>
+                    Azure
                 </li>
 
-                <li style="display: inline-block;width:100%;padding-top:20px;">Xamarin
-                        <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
-                            <div class="w3-container w3-blue w3-round-xlarge" style="width:80%">80%</div>
-                        </div>
-                    </li>
-
-                <li style="display: inline-block;width:100%;padding-top:20px;">Javascript
-                    <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
-                        <div class="w3-container w3-blue w3-round-xlarge" style="width:90%">90%</div>
-                    </div>
-                </li>
-                <li style="display: inline-block;width:100%;padding-top:20px;">HTML 5
-                    <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
-                        <div class="w3-container w3-blue w3-round-xlarge" style="width:90%">90%</div>
-                    </div>
-                </li>
-                <li style="display: inline-block;width:100%;padding-top:20px;">CSS
-                    <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
-                        <div class="w3-container w3-blue w3-round-xlarge" style="width:80%">80%</div>
-                    </div>
+                <li>Xamarin
                 </li>
 
-                <li style="display: inline-block;width:100%;padding-top:20px;">React JS
-                        <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
-                            <div class="w3-container w3-blue w3-round-xlarge" style="width:50%">50%</div>
-                        </div>
-                    </li>
-                    <li style="display: inline-block;width:100%;padding-top:20px;">Vue JS
-                        <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
-                            <div class="w3-container w3-blue w3-round-xlarge" style="width:70%">70%</div>
-                        </div>
-                    </li>
-                    <li style="display: inline-block;width:100%;padding-top:20px;">Angular
-                        <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
-                            <div class="w3-container w3-blue w3-round-xlarge" style="width:80%">80%</div>
-                        </div>
-                    </li>
+                <li>
+                    Javascript
+                </li>
+                <li>
+                    HTML 5
+                </li>
+                <li>
+                    CSS
+                </li>
 
-                <!-- <li>Xamarin <progress value="0.8" style="float: right;"></progress></li>
-                <li>Javascript <progress value="0.8" style="float: right;"></progress></li>
-                <li>Node JS <progress value="0.6" style="float: right;"></progress></li>
-                <li>Vue JS <progress value="0.7" style="float: right;"></progress></li>
-                <li>Azure <progress value="0.7" style="float: right;"></progress></li>
-                <li>SQL <progress value="0.7" style="float: right;"></progress></li>
-                <li>HTML 5 <progress value="0.9" style="float: right;"></progress></li>
-                <li>React JS <progress value="0.5" style="float: right;"></progress></li>
-                <li>CSS <progress value="0.7" style="float: right;"></progress></li> -->
+                <li>
+                    React JS
+                </li>
+                <li>
+                    Vue JS
+                </li>
+                <li>
+                    Angular
+                </li>
 
             </ul>
         </div>
+
+        <h2>Achievements & qualifications</h2>
+        <ul>
+            <li>
+                <a class="highlightText"
+                    href="https://www.youracclaim.com/badges/ee8e1120-348d-47e9-a194-289d109b7651/public_url">Advanced
+                    programming in C#</a>
+            </li>
+            <li>
+                <a class="highlightText" href="#">BCS - Level 4 diploma in software development</a>
+            </li>
+            <li>
+                <a class="highlightText" href="#">BCS - Level 4 diploma in software development methodologies</a>
+            </li>
+        </ul>
+
+
+        <h2>Courses</h2>
+        <div>
+            <ul>
+                <li>
+                    App & Web Development Fundamentals
+                </li>
+                <li>
+                    Firebrand Scrum Master Training
+                </li>
+                <li>
+                    ISTQB Software Testing
+                </li>
+                <li>
+                    MCSA SQL Database Development
+                </li>
+                <li>
+                    MTA Database Fundamentals
+                </li>
+                <li>
+                    Microsoft Advanced Programming in C#
+                </li>
+                <li>
+                    Twilio quest
+                </li>
+            </ul>
+        </div>
+
+        <div class="center">
+            <a href="#contact" class="highlightText fade largeText grow"> ⯆ </a>
+        </div>
+    </div>
+
+    <!-- Contact -->
+    <div id="contact" class="sectionAlt">
+        <h1> Contact </h1>
+        <ul>
+            <li>
+                <a class="highlightText" href="http://github.com/CameronFullerDev">
+                    GitHub
+                </a>
+            </li>
+            <li>
+                <a class="highlightText" href="mailto:cameron-fuller@hotmail.com">
+                    Email
+                </a>
+            </li>
+            <li>
+                <a class="highlightText" href="https://www.linkedin.com/in/cameron-fuller-455052141/">
+                    Linkedin
+                </a>
+            </li>
+        </ul>
+
+        <div class="center">
+            <a href="#experience" class="highlightText fade largeText grow"> ⯆ </a>
+        </div>
+    </div>
+
+    <!-- Experience -->
+    <div id="experience" class="sectionAlt">
+        <h1> Experience </h1>
+        <br />
+        <table>
+            <tr>
+                <th style="text-align: start">
+                    Junior software developer - Numerous
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    October 2018 - Current
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <ul>
+                        <li>
+                            Lorem ipsum
+                        </li>
+                        <li>
+                            Lorem ipsum
+                        </li>
+                        <li>
+                            Lorem ipsum
+                        </li>
+                        <li>
+                            Lorem ipsum
+                        </li>
+                        <li>
+                            Lorem ipsum
+                        </li>
+                        <li>
+                            Lorem ipsum
+                        </li>
+                    </ul>
+                </td>
+            </tr>
+
+            <tr>
+                <th style="text-align: start">
+                    Apprentice software developer - Numerous
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    July 2017 - October 2018
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <ul>
+                        <li>
+                            Lorem ipsum
+                        </li>
+                        <li>
+                            Lorem ipsum
+                        </li>
+                        <li>
+                            Lorem ipsum
+                        </li>
+                        <li>
+                            Lorem ipsum
+                        </li>
+                        <li>
+                            Lorem ipsum
+                        </li>
+                        <li>
+                            Lorem ipsum
+                        </li>
+                    </ul>
+                </td>
+            </tr>
+
+
+        </table>
+
+
 
         <div class="center">
             <a href="#projects" class="highlightText fade largeText grow"> ⯆ </a>
         </div>
     </div>
 
-
     <!-- Projects -->
     <div id="projects" class="sectionAlt">
         <h1> Projects </h1>
         <ul>
             <li>
-                <a href="http://www.devicetrackerplus.com/" class="highlightText"> Device tracker plus</a>
+                <a href="http://www.devicetrackerplus.com/" class="highlightText">Device tracker plus</a>
             </li>
             <li>
                 <a href="http://www.motoozo.com/" class="highlightText">Motoozo</a>
             </li>
             <li>
                 <a href="http://numerous.app/" class="highlightText">Numerous</a>
+            </li>
+            <li>
+                <p>Space invaders android game</p>
+            </li>
+            <li>
+                <p>A-Level Computing Project</p>
+                <p>
+                    The project was to create and document a program of our own design. It was worth 20% of the final
+                    qualification of my Computer science A-Level. I decided to create an arcade style platform game, I
+                    was given great feedback and results from my teachers.
+                </p>
+            </li>
+            <li>
+                <p>GCSE Computing Project</p>
+                <p>
+                    The aim was to create a program that would allow PE teachers at a school to login to a system,
+                    create/edit/delete fixtures onto a time schedule and provide a user friendly UI. I decided to create
+                    this in python as it was the language we learnt during GCSE computer science, I created the program
+                    to be an app on a phone. I received top marks for the project, that made up 60% of the overall GCSE
+                    computer science qualification, from my teachers.
+                </p>
             </li>
         </ul>
     </div>
