--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             overflow-x: hidden;
             max-width: 100%;
             scroll-behavior: smooth;
-            font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif
+
         }
 
         body {
@@ -344,7 +344,7 @@
             <h1> Hello, </h1>
             <h1 class="highlightText"> I'm Cameron</h1>
             <h2> I'm a full-stack developer.</h2>
-            <a href="#about" class="highlightText fade largeText"> ⯆ </a>
+            <a href="#about" class="highlightText fade largeText"> <img alt="" src="./img/Arrow-Down.png" /> </a>
         </div>
     </div>
 
@@ -372,7 +372,7 @@
         </p>
 
         <div class="center">
-            <a href="#skills" class="highlightText fade largeText grow"> ⯆ </a>
+            <a href="#skills" class="highlightText fade largeText grow"><img alt="" src="./img/Arrow-Down.png" /></a>
         </div>
     </div>
 
@@ -461,7 +461,7 @@
         </div>
 
         <div class="center">
-            <a href="#contact" class="highlightText fade largeText grow"> ⯆ </a>
+            <a href="#contact" class="highlightText fade largeText grow"> <img alt="" src="./img/Arrow-Down.png" /> </a>
         </div>
     </div>
 
@@ -487,7 +487,7 @@
         </ul>
 
         <div class="center">
-            <a href="#experience" class="highlightText fade largeText grow"> ⯆ </a>
+            <a href="#experience" class="highlightText fade largeText grow"> <img alt="" src="./img/Arrow-Down.png" /></a>
         </div>
     </div>
 
@@ -572,7 +572,7 @@
 
 
         <div class="center">
-            <a href="#projects" class="highlightText fade largeText grow"> ⯆ </a>
+            <a href="#projects" class="highlightText fade largeText grow"> <img alt="" src="./img/Arrow-Down.png" /> </a>
         </div>
     </div>
 
