--- a/index.html
+++ b/index.html
@@ -33,6 +33,34 @@
             font-size: 40px;
         }
 
+        .nav {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #484849;
+            position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+  z-index: 5;
+        }
+
+        .nav li {
+            float: left;
+        }
+
+        .nav li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            transition: 0.3s;
+        }
+
+        .nav li a:hover {
+            background-color: #FC0E49;
+        }
 
         .center {
             margin: auto;
@@ -55,16 +83,6 @@
             border-radius: 10px;
         }
 
-        .contactImg {
-            height: 80px;
-            width: 100px;
-            padding: 10px;
-            border-radius: 25px;
-        }
-
-        .contactImg:hover {
-            animation: bounce 1s;
-        }
 
         .highlightText {
             color: #FC0E49;
@@ -94,7 +112,6 @@
             padding: 5%;
             margin: auto;
             background-color: ghostwhite;
-            color: #484849 !important;
             margin-bottom: 20px;
             border-radius: 10px;
             position: relative;
@@ -338,8 +355,17 @@
 
 <body>
 
+        <ul class="nav">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <!-- <li><a href="#skills">Skills</a></li> -->
+                <li><a href="#contact">Contact</a></li>
+                <!-- <li><a href="#experience">Experience</a></li> -->
+                <li><a href="#projects">Projects</a></li>
+              </ul>
+
     <!-- Home -->
-    <div id="Home" class="section">
+    <div id="home" class="section">
         <div class="center-text title-background" style="text-align: center">
             <h1> Hello, </h1>
             <h1 class="highlightText"> I'm Cameron</h1>
@@ -372,11 +398,11 @@
         </p>
 
         <div class="center">
-            <a href="#skills" class="highlightText fade largeText grow"><img alt="" src="./img/Arrow-Down.png" /></a>
+            <a href="#contact" class="highlightText fade largeText grow"><img alt="" src="./img/Arrow-Down.png" /></a>
         </div>
     </div>
 
-    <!-- Skills -->
+    <!-- Skills
     <div id="skills" class="sectionAlt">
         <h2>Skills</h2>
         <div>
@@ -463,7 +489,7 @@
         <div class="center">
             <a href="#contact" class="highlightText fade largeText grow"> <img alt="" src="./img/Arrow-Down.png" /> </a>
         </div>
-    </div>
+    </div> -->
 
     <!-- Contact -->
     <div id="contact" class="sectionAlt">
@@ -485,13 +511,14 @@
                 </a>
             </li>
         </ul>
-
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf_V_N9HIEJzCEjV3sh7kICvAuLR9vmOrvFdK7KJCzbb_Ac2A/viewform?embedded=true" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         <div class="center">
-            <a href="#experience" class="highlightText fade largeText grow"> <img alt="" src="./img/Arrow-Down.png" /></a>
+            <a href="#projects" class="highlightText fade largeText grow"> <img alt=""
+                    src="./img/Arrow-Down.png" /></a>
         </div>
     </div>
 
-    <!-- Experience -->
+    <!-- Experience
     <div id="experience" class="sectionAlt">
         <h1> Experience </h1>
         <br />
@@ -572,9 +599,10 @@
 
 
         <div class="center">
-            <a href="#projects" class="highlightText fade largeText grow"> <img alt="" src="./img/Arrow-Down.png" /> </a>
+            <a href="#projects" class="highlightText fade largeText grow"> <img alt="" src="./img/Arrow-Down.png" />
+            </a>
         </div>
-    </div>
+    </div> -->
 
     <!-- Projects -->
     <div id="projects" class="sectionAlt">
@@ -590,25 +618,16 @@
                 <a href="http://numerous.app/" class="highlightText">Numerous</a>
             </li>
             <li>
+                <p>Shared calendar app</p>
+            </li>
+            <li>
                 <p>Space invaders android game</p>
             </li>
             <li>
                 <p>A-Level Computing Project</p>
-                <p>
-                    The project was to create and document a program of our own design. It was worth 20% of the final
-                    qualification of my Computer science A-Level. I decided to create an arcade style platform game, I
-                    was given great feedback and results from my teachers.
-                </p>
             </li>
             <li>
                 <p>GCSE Computing Project</p>
-                <p>
-                    The aim was to create a program that would allow PE teachers at a school to login to a system,
-                    create/edit/delete fixtures onto a time schedule and provide a user friendly UI. I decided to create
-                    this in python as it was the language we learnt during GCSE computer science, I created the program
-                    to be an app on a phone. I received top marks for the project, that made up 60% of the overall GCSE
-                    computer science qualification, from my teachers.
-                </p>
             </li>
         </ul>
     </div>
