--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content=""
-    />
+    <meta name="description" content="Welcome to the portfolio website of Cameron Fuller, showcasing expertise in software engineering and innovation. Explore projects, skills, and achievements.">
+
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Cameron Fuller</title>
